scribble-test/src/test/resources/good/wfchoice/gchoice/Choice09c.scr
module good.wfchoice.gchoice.Choice09c;


global protocol Proto1(role A, role B, role C)
{
	3() from A to C;
	rec Y
	{
		() from A to B;
		2a() from B to A;
		rec X
		{
			1() from A to B;
			choice at A
			{
				continue X;  // Testing project choice subject "inference", and testing continue-only choice block
			}
			or
			{
				continue X;
			}
			or
			{
				continue Y;  // Different continue-only-blocks, tests FSM building
			}
			or
			{
				4() from A to B;
			}
		}
	}
}

