scribble-test/src/test/resources/bad/wfchoice/gchoice/Choice09c.scr
module bad.wfchoice.gchoice.Choice09c;


global protocol Proto1(role A, role B, role C)
{
	3() from A to C;
	rec Y
	{
		2() from A to B;  // Uncomment is bad (non-enabled B / non-disjoint labels)
		2a() from B to A;
		rec X
		{
			1() from A to B;
			choice at A
			{
				continue Y;  // Different continue-only-blocks, tests FSM building
			}
			or
			{
				2() from A to B;
				continue X;  // Testing project choice subject "inference", and testing continue-only choice block
			}
			or
			{
				continue X;
			}
			or
			{
				4() from A to B;
			}
		}
	}
}

